--- a/admin.html
+++ b/admin.html
@@ -1,241 +1,137 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Admin Dashboard - Jayvee Hall of Mansion</title>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/qrcode-generator/1.4.4/qrcode.min.js"></script>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Admin Panel - Jayvee Hall of Mansion</title>
   <style>
     body {
-      font-family: Arial, sans-serif;
-      margin: 0; padding: 0;
-      background: url('assets/admin-bg.jpg') no-repeat center center/cover;
-      min-height: 100vh; display: flex; flex-direction: column;
+      font-family: 'Poppins', sans-serif;
+      background: #f4f4f4;
+      margin: 0;
     }
+
     header {
-      background: rgba(0,0,0,0.7); color: white;
-      padding: 15px; display: flex; justify-content: space-between; align-items: center;
-      font-size: 22px; font-weight: bold;
+      background: #343a40;
+      color: white;
+      text-align: center;
+      padding: 20px;
+      font-size: 24px;
+      font-weight: 600;
     }
-    .notif-bell {
-      position: relative; cursor: pointer; font-size: 24px;
-    }
-    .notif-bell::after {
-      content: attr(data-count);
-      position: absolute; top: -5px; right: -8px;
-      background: red; color: white; font-size: 12px; font-weight: bold;
-      padding: 2px 6px; border-radius: 50%; display: none;
-    }
-    .notif-bell[data-count]:not([data-count="0"])::after { display: block; animation: pulse 1s infinite; }
-    @keyframes pulse { 0%{transform:scale(1);} 50%{transform:scale(1.3);} 100%{transform:scale(1);} }
 
-    .admin-container { flex: 1; padding: 20px; overflow-x: auto; }
-    table {
-      width: 100%; border-collapse: collapse; background: white; border-radius: 10px; overflow: hidden;
+    .container {
+      max-width: 1000px;
+      margin: 40px auto;
+      background: white;
+      padding: 25px;
+      border-radius: 12px;
+      box-shadow: 0 6px 20px rgba(0,0,0,0.1);
     }
-    th, td { padding: 12px; text-align: center; border-bottom: 1px solid #ddd; }
-    th { background: #333; color: white; position: sticky; top: 0; }
-    tr:hover { background: #f2f2f2; }
 
-    button { padding: 6px 12px; border: none; cursor: pointer; border-radius: 5px; margin: 2px; font-size: 14px; }
-    .approve { background: #28a745; color: white; }
+    .booking {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      padding: 15px;
+      margin-bottom: 12px;
+      background: #f8f9fa;
+      border-radius: 8px;
+      border-left: 5px solid #0d6efd;
+    }
+
+    .booking-info {
+      flex: 1;
+    }
+
+    .booking-actions button {
+      margin-left: 10px;
+      padding: 8px 14px;
+      border: none;
+      border-radius: 6px;
+      cursor: pointer;
+      font-weight: 600;
+    }
+
+    .approve { background: #198754; color: white; }
+    .approve:hover { background: #157347; }
     .reject { background: #dc3545; color: white; }
-    .details { background: #007bff; color: white; }
-    .receipt { background: #6f42c1; color: white; }
+    .reject:hover { background: #bb2d3b; }
 
-    /* Modal */
-    .modal {
-      display: none; position: fixed; top: 0; left: 0; width: 100%; height: 100%;
-      background: rgba(0,0,0,0.7); justify-content: center; align-items: center; z-index: 1000;
-    }
-    .modal-content {
-      background: white; padding: 20px; border-radius: 10px;
-      width: 400px; max-width: 90%; position: relative; animation: fadeIn 0.3s ease-in-out;
-    }
-    .close { position: absolute; top: 10px; right: 15px; font-size: 22px; cursor: pointer; }
-    @keyframes fadeIn { from { opacity: 0; transform: translateY(-20px);} to{opacity:1; transform:translateY(0);} }
-
-    .notif-popup {
-      position: fixed; top: 20px; right: 20px;
-      background: #28a745; color: white; padding: 12px 20px; border-radius: 6px;
-      display: none; z-index: 2000; animation: fadeIn 0.5s ease-in-out;
-    }
-    @media (max-width: 768px) {
-      table { font-size: 12px; } th, td { padding: 8px; }
-      .modal-content { width: 90%; }
-    }
-
-    /* Loader */
-    #loader {
-      display:none; text-align:center; padding:20px; font-weight:bold; color:white;
+    .status {
+      font-weight: 600;
+      margin-top: 5px;
     }
   </style>
 </head>
 <body>
-<header>
-  Admin Dashboard - Jayvee Hall of Mansion
-  <div class="notif-bell" id="notifBell" data-count="0">🔔</div>
-</header>
-
-<div id="loader">Loading bookings...</div>
-<div class="admin-container">
-  <table>
-    <thead>
-      <tr>
-        <th>User</th>
-        <th>Room</th>
-        <th>Date</th>
-        <th>Status</th>
-        <th>Actions</th>
-      </tr>
-    </thead>
-    <tbody id="bookingTable"></tbody>
-  </table>
-</div>
-
-<div class="notif-popup" id="notifPopup">New booking received!</div>
-
-<!-- Details Modal -->
-<div id="detailsModal" class="modal">
-  <div class="modal-content">
-    <span class="close" onclick="closeDetails()">&times;</span>
-    <h3>Booking Details</h3>
-    <p><b>User:</b> <span id="detailUser"></span></p>
-    <p><b>Room:</b> <span id="detailRoom"></span></p>
-    <p><b>Date:</b> <span id="detailDate"></span></p>
-    <p><b>Status:</b> <span id="detailStatus"></span></p>
+  <header>Admin Panel - Manage Bookings</header>
+  <div class="container" id="bookingsList">
+    Loading bookings...
   </div>
-</div>
 
-<script type="module">
-  import { initializeApp } from "https://www.gstatic.com/firebasejs/9.22.2/firebase-app.js";
-  import { getDatabase, ref, onValue, update } from "https://www.gstatic.com/firebasejs/9.22.2/firebase-database.js";
+  <script type="module">
+    import { initializeApp } from "https://www.gstatic.com/firebasejs/9.22.2/firebase-app.js";
+    import { getDatabase, ref, onValue, update } from "https://www.gstatic.com/firebasejs/9.22.2/firebase-database.js";
 
-  const firebaseConfig = {
-    apiKey: "AIzaSyCdMcz7H8k5QjQikD6ZAlf7kHw7BbUBO70",
-    authDomain: "jayveehallofmansion.firebaseapp.com",
-    databaseURL: "https://jayveehallofmansion-default-rtdb.firebaseio.com",
-    projectId: "jayveehallofmansion",
-    storageBucket: "jayveehallofmansion.firebasestorage.app",
-    messagingSenderId: "596113378063",
-    appId: "1:596113378063:web:ae6fa08175627727660c7a",
-    measurementId: "G-LY9QYJKZMX"
-  };
-
-  const app = initializeApp(firebaseConfig);
-  const db = getDatabase(app);
-
-  const bookingTable = document.getElementById("bookingTable");
-  const notifBell = document.getElementById("notifBell");
-  const notifPopup = document.getElementById("notifPopup");
-  const loader = document.getElementById("loader");
-
-  let lastBookingCount = 0;
-  let bookings = [];
-
-  function loadBookings(data) {
-    bookingTable.innerHTML = "";
-    bookings = Object.keys(data).map(key => ({ id: key, ...data[key] }));
-    bookings.sort((a,b)=> new Date(b.date) - new Date(a.date)); // Show latest first
-
-    if (bookings.length === 0) {
-      bookingTable.innerHTML = "<tr><td colspan='5'>No bookings yet</td></tr>";
-      return;
-    }
-
-    bookings.forEach((b, index) => {
-      bookingTable.innerHTML += `
-        <tr>
-          <td>${b.name || "Unknown"}</td>
-          <td>${b.room}</td>
-          <td>${b.date || "N/A"}</td>
-          <td style="font-weight:bold; color:${b.status === 'Approved' ? 'green' : b.status === 'Rejected' ? 'red' : 'orange'};">
-            ${b.status}
-          </td>
-          <td>
-            <button class="approve" onclick="updateStatus('${b.id}', 'Approved')">Approve</button>
-            <button class="reject" onclick="updateStatus('${b.id}', 'Rejected')">Reject</button>
-            <button class="details" onclick="showDetails(${index})">Details</button>
-            <button class="receipt" onclick="downloadReceipt(${index})">Receipt</button>
-          </td>
-        </tr>
-      `;
-    });
-  }
-
-  function showNotification(newCount) {
-    if (newCount > 0) {
-      notifBell.setAttribute("data-count", newCount);
-      notifPopup.style.display = "block";
-      setTimeout(() => notifPopup.style.display = "none", 3000);
-    }
-  }
-
-  // Real-time listener
-  const bookingsRef = ref(db, 'bookings');
-  loader.style.display = "block";
-  onValue(bookingsRef, (snapshot) => {
-    loader.style.display = "none";
-    const data = snapshot.val() || {};
-    const currentCount = Object.keys(data).length;
-    if (currentCount > lastBookingCount) {
-      showNotification(currentCount - lastBookingCount);
-    }
-    lastBookingCount = currentCount;
-    loadBookings(data);
-  });
-
-  // Expose to window
-  window.updateStatus = function(id, status) {
-    update(ref(db, 'bookings/' + id), { status });
-    alert(`Booking ${status}!`);
-  }
-
-  window.showDetails = function(index) {
-    const b = bookings[index];
-    document.getElementById("detailUser").innerText = b.name || "Unknown";
-    document.getElementById("detailRoom").innerText = b.room;
-    document.getElementById("detailDate").innerText = b.date || "N/A";
-    document.getElementById("detailStatus").innerText = b.status;
-    document.getElementById("detailsModal").style.display = "flex";
-  }
-
-  window.closeDetails = function() {
-    document.getElementById("detailsModal").style.display = "none";
-  }
-
-  window.downloadReceipt = function(index) {
-    const { jsPDF } = window.jspdf;
-    const booking = bookings[index];
-    const pdf = new jsPDF({ orientation: "portrait", unit: "px", format: "a4" });
-
-    const bg = new Image();
-    bg.src = "assets/receipt-bg.jpg";
-    bg.onload = () => {
-      pdf.addImage(bg, "JPEG", 0, 0, 420, 595);
-      const logo = new Image();
-      logo.src = "assets/logo.png";
-      logo.onload = () => {
-        pdf.addImage(logo, "PNG", 160, 20, 100, 50);
-        pdf.setFontSize(16);
-        pdf.text("Jayvee Hall of Mansion - Booking Receipt", 30, 100);
-        pdf.setFontSize(12);
-        pdf.text(`User: ${booking.name || "Unknown"}`, 30, 140);
-        pdf.text(`Room: ${booking.room}`, 30, 160);
-        pdf.text(`Date: ${booking.date || "N/A"}`, 30, 180);
-        pdf.text(`Status: ${booking.status}`, 30, 200);
-
-        const qr = qrcode(0, "L");
-        qr.addData(`Booking for ${booking.name || "Guest"} - ${booking.room} - ${booking.date}`);
-        qr.make();
-        const qrImg = qr.createDataURL();
-        pdf.addImage(qrImg, "PNG", 300, 140, 80, 80);
-
-        pdf.save(`Booking_Receipt_${booking.name || "Guest"}.pdf`);
-      };
+    const firebaseConfig = {
+      apiKey: "AIzaSyCdMcz7H8k5QjQikD6ZAlf7kHw7BbUBO70",
+      authDomain: "jayveehallofmansion.firebaseapp.com",
+      databaseURL: "https://jayveehallofmansion-default-rtdb.firebaseio.com",
+      projectId: "jayveehallofmansion",
+      storageBucket: "jayveehallofmansion.firebasestorage.app",
+      messagingSenderId: "596113378063",
+      appId: "1:596113378063:web:ae6fa08175627727660c7a",
+      measurementId: "G-LY9QYJKZMX"
     };
-  }
-</script>
+
+    const app = initializeApp(firebaseConfig);
+    const db = getDatabase(app);
+
+    const bookingsList = document.getElementById("bookingsList");
+    const bookingsRef = ref(db, "bookings");
+
+    const renderBookings = (data) => {
+      bookingsList.innerHTML = "";
+      if (!data) {
+        bookingsList.innerHTML = "No bookings yet.";
+        return;
+      }
+
+      Object.entries(data).forEach(([id, booking]) => {
+        const div = document.createElement("div");
+        div.className = "booking";
+
+        div.innerHTML = `
+          <div class="booking-info">
+            <strong>${booking.room}</strong> <br>
+            ${booking.name} (${booking.email}) <br>
+            Check-in: ${booking.checkin} | Check-out: ${booking.checkout} <br>
+            <span class="status">Status: ${booking.status}</span>
+          </div>
+          <div class="booking-actions">
+            <button class="approve">Approve</button>
+            <button class="reject">Reject</button>
+          </div>
+        `;
+
+        const approveBtn = div.querySelector(".approve");
+        const rejectBtn = div.querySelector(".reject");
+
+        approveBtn.onclick = () => {
+          update(ref(db, "bookings/" + id), { status: "approved" });
+        };
+        rejectBtn.onclick = () => {
+          update(ref(db, "bookings/" + id), { status: "rejected" });
+        };
+
+        bookingsList.appendChild(div);
+      });
+    };
+
+    onValue(bookingsRef, (snapshot) => {
+      renderBookings(snapshot.val());
+    });
+  </script>
 </body>
 </html>
