--- a/booking.html
+++ b/booking.html
@@ -2,120 +2,92 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Booking - Jayvee Hall of Mansion</title>
-  <link rel="stylesheet" href="style.css">
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/1.4.1/html2canvas.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Book a Room - Jayvee Hall of Mansion</title>
+  <link rel="stylesheet" href="style.css" />
   <style>
     body {
+      font-family: 'Poppins', sans-serif;
+      background: url('assets/bgindex.jpg') no-repeat center center fixed;
+      background-size: cover;
       margin: 0;
-      font-family: Arial, sans-serif;
-      background: url('assets/bgindex.jpg') no-repeat center center/cover;
-      height: 100vh;
-      display: flex;
-      justify-content: center;
-      align-items: center;
+      color: white;
     }
 
     .booking-container {
-      background: rgba(255,255,255,0.95);
+      max-width: 600px;
+      margin: 60px auto;
       padding: 30px;
-      border-radius: 12px;
-      width: 90%;
-      max-width: 500px;
-      box-shadow: 0 4px 20px rgba(0,0,0,0.3);
+      background: rgba(0,0,0,0.65);
+      border-radius: 14px;
       text-align: center;
+      backdrop-filter: blur(6px);
+      animation: fadeIn 0.8s ease;
     }
 
-    h2 { margin-bottom: 20px; }
+    .booking-container h2 { margin-bottom: 20px; }
 
-    input, select {
-      width: 100%;
-      padding: 12px;
-      margin: 8px 0;
-      border-radius: 8px;
-      border: 1px solid #ccc;
-      font-size: 16px;
+    .booking-form {
+      display: flex;
+      flex-direction: column;
+      gap: 15px;
     }
 
-    button {
-      width: 100%;
+    .booking-form input, .booking-form select {
       padding: 12px;
-      background: #333;
-      color: white;
       border: none;
       border-radius: 8px;
       font-size: 16px;
+    }
+
+    .booking-form button {
+      padding: 12px;
+      border: none;
+      border-radius: 8px;
+      font-size: 16px;
+      font-weight: 600;
       cursor: pointer;
-      margin-top: 10px;
+      background: #198754;
+      color: white;
+      transition: 0.3s;
     }
 
-    button:hover { background: #555; }
+    .booking-form button:hover { background: #157347; }
 
-    .success-message {
-      display: none;
-      color: green;
-      margin-top: 10px;
-      font-weight: bold;
+    .message {
+      margin-top: 15px;
+      font-weight: 500;
     }
 
-    /* Receipt Preview */
-    #receipt {
-      display: none;
-      position: relative;
-      width: 500px;
-      padding: 30px;
-      text-align: center;
-      background: url('assets/bgindex.jpg') no-repeat center center/cover;
-      border: 2px solid #333;
-      border-radius: 12px;
-      color: #000;
+    @keyframes fadeIn {
+      from { opacity: 0; transform: translateY(20px); }
+      to { opacity: 1; transform: translateY(0); }
     }
-
-    #receipt h3 { margin-bottom: 15px; }
-    #receipt p { margin: 6px 0; font-weight: bold; }
   </style>
 </head>
 <body>
-
   <div class="booking-container">
     <h2>Book Your Stay</h2>
-    <form id="bookingForm">
-      <input type="text" id="name" placeholder="Full Name" required />
-      <input type="email" id="email" placeholder="Email" required />
-      <input type="tel" id="phone" placeholder="Phone Number" required />
-      <input type="date" id="checkin" required />
-      <input type="date" id="checkout" required />
-      <select id="room" required>
-        <option value="">Select Room</option>
-        <option value="Room 101 - Deluxe Room">Room 101 - Deluxe Room</option>
-        <option value="Room 102 - Executive Suite">Room 102 - Executive Suite</option>
-        <option value="Room 103 - Family Room">Room 103 - Family Room</option>
-        <option value="Room 104 - Presidential Suite">Room 104 - Presidential Suite</option>
+    <form class="booking-form" id="bookingForm">
+      <input type="text" id="name" placeholder="Full Name" required>
+      <input type="email" id="email" placeholder="Email Address" required>
+      <input type="date" id="checkin" required>
+      <input type="date" id="checkout" required>
+      <select id="room">
+        <option value="" disabled selected>Select a Room</option>
+        <option>Room 101 - Deluxe Room</option>
+        <option>Room 102 - Executive Suite</option>
+        <option>Room 103 - Family Room</option>
+        <option>Room 104 - Presidential Suite</option>
       </select>
       <button type="submit">Submit Booking</button>
-      <p class="success-message" id="successMessage">Booking submitted! Your receipt is downloading...</p>
     </form>
-  </div>
-
-  <!-- Hidden Receipt Template -->
-  <div id="receipt">
-    <h3>Jayvee Hall of Mansion</h3>
-    <p><strong>Booking Receipt</strong></p>
-    <p id="rName"></p>
-    <p id="rEmail"></p>
-    <p id="rPhone"></p>
-    <p id="rRoom"></p>
-    <p id="rCheckin"></p>
-    <p id="rCheckout"></p>
-    <p>Status: Pending</p>
-    <p>Thank you for booking with us!</p>
+    <div class="message" id="message"></div>
   </div>
 
   <script type="module">
     import { initializeApp } from "https://www.gstatic.com/firebasejs/9.22.2/firebase-app.js";
-    import { getDatabase, ref, push, set } from "https://www.gstatic.com/firebasejs/9.22.2/firebase-database.js";
+    import { getDatabase, ref, push } from "https://www.gstatic.com/firebasejs/9.22.2/firebase-database.js";
 
     const firebaseConfig = {
       apiKey: "AIzaSyCdMcz7H8k5QjQikD6ZAlf7kHw7BbUBO70",
@@ -131,60 +103,31 @@
     const app = initializeApp(firebaseConfig);
     const db = getDatabase(app);
 
-    document.getElementById('bookingForm').addEventListener('submit', async function(e){
+    const bookingForm = document.getElementById("bookingForm");
+    const message = document.getElementById("message");
+
+    bookingForm.addEventListener("submit", (e) => {
       e.preventDefault();
 
       const booking = {
-        id: Date.now(),
-        name: document.getElementById('name').value,
-        email: document.getElementById('email').value,
-        phone: document.getElementById('phone').value,
-        checkin: document.getElementById('checkin').value,
-        checkout: document.getElementById('checkout').value,
-        room: document.getElementById('room').value,
-        status: 'Pending'
+        name: document.getElementById("name").value,
+        email: document.getElementById("email").value,
+        checkin: document.getElementById("checkin").value,
+        checkout: document.getElementById("checkout").value,
+        room: document.getElementById("room").value,
+        status: "pending",
+        timestamp: Date.now()
       };
 
-      // Save locally
-      const bookings = JSON.parse(localStorage.getItem('bookings')) || [];
-      bookings.push(booking);
-      localStorage.setItem('bookings', JSON.stringify(bookings));
-
-      // Save to Firebase
-      const bookingsRef = ref(db, 'bookings');
-      const newBookingRef = push(bookingsRef);
-      await set(newBookingRef, booking);
-
-      // Prepare Receipt
-      document.getElementById('rName').innerText = "Name: " + booking.name;
-      document.getElementById('rEmail').innerText = "Email: " + booking.email;
-      document.getElementById('rPhone').innerText = "Phone: " + booking.phone;
-      document.getElementById('rRoom').innerText = "Room: " + booking.room;
-      document.getElementById('rCheckin').innerText = "Check-in: " + booking.checkin;
-      document.getElementById('rCheckout').innerText = "Check-out: " + booking.checkout;
-
-      document.getElementById('successMessage').style.display = 'block';
-      const receipt = document.getElementById('receipt');
-      receipt.style.display = 'block';
-
-      const canvas = await html2canvas(receipt);
-      const imgData = canvas.toDataURL('image/png');
-      const { jsPDF } = window.jspdf;
-      const pdf = new jsPDF('p', 'mm', 'a4');
-      const imgProps = pdf.getImageProperties(imgData);
-      const pdfWidth = pdf.internal.pageSize.getWidth();
-      const pdfHeight = (imgProps.height * pdfWidth) / imgProps.width;
-      pdf.addImage(imgData, 'PNG', 0, 0, pdfWidth, pdfHeight);
-      pdf.save(`Booking_Receipt_${booking.id}.pdf`);
-
-      receipt.style.display = 'none';
-
-      setTimeout(() => {
-        document.getElementById('bookingForm').reset();
-        window.location.href = 'home.html';
-      }, 3000);
+      push(ref(db, "bookings"), booking)
+        .then(() => {
+          message.textContent = "✅ Booking submitted successfully! We will notify you once approved.";
+          bookingForm.reset();
+        })
+        .catch(() => {
+          message.textContent = "❌ Failed to submit booking. Please try again.";
+        });
     });
   </script>
-
 </body>
-      </html>
+  </html>
