--- a/home.html
+++ b/home.html
@@ -171,7 +171,21 @@
 </head>
 <body>
 
-<header>Welcome to Jayvee Hall of Mansion</header>
+  <header class="header" role="banner">
+    <a class="brand" href="home.html" aria-label="Go to Home">
+      <img src="assets/logo.jpg" alt="JHOM Logo" />
+      <h1>JAYVEE HALL OF MANSION</h1>
+    </a>
+    <nav class="nav" role="navigation" aria-label="Primary navigation">
+      <a href="home.html" class="active" aria-current="page">HOME</a>
+      <a href="room.html">ROOM</a>
+      <a href="cart.html">CART</a>
+      <a href="message.html">MESSAGE</a>
+      <a href="notification.html">NOTIFICATION</a>
+      <a href="adminpanel.html">ADMIN</a>
+      <button class="icon-btn" id="menuBtn" aria-label="Open menu">☰</button>
+    </nav>
+  </header>
 
 <div class="home-container">
   <p>Experience luxury and comfort in the heart of Malungon, Sarangani. Explore our elegant rooms and choose the perfect stay for you.</p>
@@ -198,6 +212,13 @@
 <!-- Notifications -->
 <div id="notifications"></div>
 
+<footer class="footer" role="contentinfo">
+    <div class="container">
+      <div class="small-muted">© 2025 Jayvee Hall of Mansion. All Rights Reserved.</div>
+      <div class="kv">JHOM</div>
+    </div>
+</footer>
+  
 <script type="module">
   import { initializeApp } from "https://www.gstatic.com/firebasejs/9.22.2/firebase-app.js";
   import { getDatabase, ref, onValue } from "https://www.gstatic.com/firebasejs/9.22.2/firebase-database.js";
