--- a/home.html
+++ b/home.html
@@ -171,21 +171,7 @@
 </head>
 <body>
 
-  <header class="header" role="banner">
-    <a class="brand" href="home.html" aria-label="Go to Home">
-      <img src="assets/logo.jpg" alt="JHOM Logo" />
-      <h1>JAYVEE HALL OF MANSION</h1>
-    </a>
-    <nav class="nav" role="navigation" aria-label="Primary navigation">
-      <a href="home.html" class="active" aria-current="page">HOME</a>
-      <a href="room.html">ROOM</a>
-      <a href="cart.html">CART</a>
-      <a href="message.html">MESSAGE</a>
-      <a href="notification.html">NOTIFICATION</a>
-      <a href="adminpanel.html">ADMIN</a>
-      <button class="icon-btn" id="menuBtn" aria-label="Open menu">☰</button>
-    </nav>
-  </header>
+  <header> JAYVEE HALL OF MANSION </header>
 
 <div class="home-container">
   <p>Experience luxury and comfort in the heart of Malungon, Sarangani. Explore our elegant rooms and choose the perfect stay for you.</p>
@@ -212,11 +198,11 @@
 <!-- Notifications -->
 <div id="notifications"></div>
 
-<footer class="footer" role="contentinfo">
-    <div class="container">
-      <div class="small-muted">© 2025 Jayvee Hall of Mansion. All Rights Reserved.</div>
-      <div class="kv">JHOM</div>
-    </div>
+<footer style="background: rgba(0,0,0,0.8); color: #fff; text-align: center; padding: 15px 10px; margin-top: auto;">
+  <div style="max-width: 1200px; margin: auto;">
+    <p style="margin: 5px 0; font-size: 14px;">© 2025 Jayvee Hall of Mansion. All Rights Reserved.</p>
+    <p style="margin: 5px 0; font-weight: bold;">JHOM</p>
+  </div>
 </footer>
   
 <script type="module">
