--- a/booking.html
+++ b/booking.html
@@ -21,22 +21,14 @@
       min-height: 100vh;
       padding: 20px;
     }
-
-    /* Header */
-    header {
-      width: 100%;
-      text-align: center;
-      margin-bottom: 20px;
-    }
-    header h1 {
-      font-size: 2rem;
-      letter-spacing: 1px;
+header {
       background: rgba(0,0,0,0.7);
-      display: inline-block;
-      padding: 10px 20px;
-      border-radius: 12px;
-      backdrop-filter: blur(5px);
-    }
+      text-align: center;
+      padding: 20px;
+      font-size: 28px;
+      font-weight: bold;
+      letter-spacing: 1px;
+}
 
     /* Booking Container */
     .booking-container {
@@ -116,25 +108,10 @@
     @media (max-width: 600px) {
       .booking-container { padding: 30px 20px; }
       .booking-container h2 { font-size: 1.5rem; }
-      header h1 { font-size: 1.5rem; }
+      header h1 { font-size: 22px; }
     }
 
-    /* Footer */
-    footer {
-      background: rgba(0,0,0,0.8);
-      color: #fff;
-      text-align: center;
-      padding: 15px 10px;
-      margin-top: auto;
-      width: 100%;
-    }
-    footer p {
-      margin: 5px 0;
-      font-size: 14px;
-    }
-    footer p:last-child {
-      font-weight: bold;
-    }
+
   </style>
 </head>
 <body>
@@ -161,11 +138,11 @@
     <div class="message" id="message"></div>
   </div>
 
-  <footer>
-    <div style="max-width: 1200px; margin: auto;">
-      <p>© 2025 Jayvee Hall of Mansion. All Rights Reserved.</p>
-      <p>JHOM</p>
-    </div>
+  <footer style="background: rgba(0,0,0,0.8); color: #fff; text-align: center; padding: 15px 10px; margin-top: auto;">
+  <div style="max-width: 1200px; margin: auto;">
+    <p style="margin: 5px 0; font-size: 14px;">© 2025 Jayvee Hall of Mansion. All Rights Reserved.</p>
+    <p style="margin: 5px 0; font-weight: bold;">JHOM</p>
+  </div>
   </footer>
 
   <script type="module">
